# wallchart

./: .gitignore  Dockerfile  README.md  app.py  config.ini.default  main.py  mapping.yml  migrate.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
static/: style.css
templates/: admin.html  colleges.html  department.html  departments.html  find_worker.html  former.html  layout.html  login.html  structure_test.html  structure_tests.html  units.html  units_edit.html  upload_record.html  users.html  worker.html  workers.html  workers_edit.html
templates/includes/: pagination.html
tests/: conftest.py  test_api.py  test_cli.py  test_flaskr.py  test_roster.csv  test_util.py  test_views.py  test_wallchart.py
wallchart/: __init__.py  api.py  app.py  db.py  defaults.py  main.py  models.py  util.py  views.py  wallchart.py
wallchart/static/: style.css
wallchart/templates/: admin.html  department.html  departments.html  find_worker.html  homepage.html  layout.html  login.html  structure_test.html  units.html  upload_record.html  users.html  worker.html
wallchart/templates/includes/: modal.html
